Delete dev.vankka.dependencydownload.plugin